# AgenticDesignPatterns

./: .gitignore  LICENSE
chapter02/: README.md  pyproject.toml
chapter02/src/: adk_routing.py
chapter18/: README.md
chapter18/src/: crewai_guardrail_example.py  llm_guardrail_example.py
